ui: Change the default "Toggle drawer" hotkey
In my setup (AZERTY keyboard), this conflicts with the WASD keys when
scrolling horizontally and makes for a very annoying interface.

--- a/ui/src/assets/dejaview.scss
+++ b/ui/src/assets/dejaview.scss
@@ -28,6 +28,7 @@
 @import "viz_page";
 @import "widgets_page";
 @import "plugins_page";
+@import "../../node_modules/@xterm/xterm/css/xterm";
 
 // Widgets - keep these sorted (they should NOT have any inter-dependencies)
 @import "widgets/anchor";
